2006-06-21  Matthew Gregan  <kinetik@orcon.net.nz>

	* tests/empty_environment/__driver__.lua: Fix test on Cygwin--copy
	essential DLLs into current directory before emptying $PATH.
	* win32/monotone.iss: Remove hardcoded paths that were
	accidentally left in after debugging.

2006-06-20  Matthew Gregan  <kinetik@orcon.net.nz>

	* hash_map.hh: Add a specialization for unsigned long; fixes build
	on Cygwin/GCC 3.4.  Thanks to Lapo Luchini for the original patch.
	* win32/monotone.iss: Add monotone logo to wizard (generated from
	figures/monotone-logo.svg).  Sanity check key ID, branch name, and
	workspace path.
	* Makefile.am: Include win32/modpath.iss in EXTRA_DIST.

2006-06-20  Alex Queiroz  <alex@ventonegro.org>

	* po/pt_BR.po: Fixed remaining fuzzies.

2006-06-20  Nathaniel Smith  <njs@pobox.com>

	* tester.lua (open_or_err): New function.
	(pre_cmd): Use it.  It should probably be used much more widely,
	but I'm not sure what I'm doing yet...

2006-06-20  Nathaniel Smith  <njs@pobox.com>

	* INSTALL: Update a little bit, in particular, give a newer boost
	download link in response to complaint on mailing list, and put
	1.9 version number on automake command line.

2006-06-20  Nathaniel Smith  <njs@pobox.com>

	* configure.ac: Remove autotest-related configury.  
	Add magic AM_INIT_AUTOMAKE options to make tar handle the long
	filenames in the new test suite (automake 1.9 is now required).

2006-06-20  Nathaniel Smith  <njs@pobox.com>

	* Makefile.am (EXTRA_DIST): The auto* gods demand sacrifice;
	remove an extra / to balance previous change.
	(NB: apparently a trailing / on a directory in EXTRA_DIST does
	bizarre things.)
	Also, remove empty files tests/atconfig.in, tests/atlocal.in.

2006-06-19  Nathaniel Smith  <njs@pobox.com>

	* Makefile.am (EXTRA_DIST): Add missing \.

2006-06-19  Nathaniel Smith  <njs@pobox.com>

	* Makefile.am (EXTRA_DIST, BUILT_SOURCES_CLEAN): 
	* database.hh, database.cc: Remove old dead views stuff.
